# xorg-x11-glamor

./: Makefile  README.md  glamor-0.5-speed-up-lines.patch  xorg-x11-glamor.spec
src/: .gitignore  COPYING  Makefile.am  README  ReleaseNote  configure.ac  glamor-egl.pc.in  glamor.pc.in
src/conf/: Makefile.am
src/src/: Makefile.am  glamor.c  glamor.h  glamor_addtraps.c  glamor_copyarea.c  glamor_copyplane.c  glamor_core.c  glamor_egl.c  glamor_fbo.c  glamor_fill.c  glamor_fillspans.c  glamor_getspans.c  glamor_gl_dispatch.c  glamor_gl_dispatch.h  glamor_glyphblt.c  glamor_gradient.c  glamor_picture.c  glamor_pixmap.c  glamor_polyfillrect.c  glamor_polylines.c  glamor_priv.h  glamor_putimage.c  glamor_render.c  glamor_setspans.c  glamor_tile.c  glamor_trapezoid.c  glamor_triangles.c  glamor_utils.h  glamor_vbo.c  glamor_xv.c
